delete unused filles
