# api/openapi.yaml
@@ -7,7 +7,7 @@ info:
   version: 0.0.1
 servers:
   - url: https://petstore.swagger.io/v2
-  - url: http://localhost/meetup/api/v1
+  - url: http://localhost/api/v1
 tags:
   - name: meetUsers
     description: "Operations about users account (customer, partner, employee)"
@@ -70,7 +70,7 @@ paths:
         - api_key: []
       x-codegen-request-body-name: body
       x-swagger-router-controller: User
-  /home:
+  /recruitment/positions.json:
     get:
       tags:
         - user
@@ -78,35 +78,64 @@ paths:
       description: This can only be done by the logged in user.
       operationId: home
       parameters:
-        - name: type
+        - name: description
           in: query
           description: Tipe data yang di request
-          required: true
+          required: false
+          allowEmptyValue: true
           style: form
           explode: true
           schema:
-            type: array
-            items:
-              type: string
-              enum:
-                - personal
-                - company
-              default: personal
-        - name: category
+            type: string
+            # items:
+            #   type: string
+            #   enum:
+            #     - java
+            #     - javascript
+            #     - golang
+            #     - nodejs
+            #     - php
+            #     - python
+            #   default: nodejs
+        - name: location
           in: query
           description: Status values that need to be considered for filter
-          required: true
+          required: false
           style: form
           explode: true
           schema:
-            type: array
-            items:
-              type: string
-              enum:
-                - customer
-                - partner
-                - employee
-              default: customer
+            type: string
+        - name: x-api-key
+          in: header
+          description: key access
+          required: true
+          style: simple
+          explode: true
+          schema:
+            type: string
+      responses:
+        default:
+          description: successful operation
+          content: {}
+      security:
+        - bearerAuth: []
+      x-codegen-request-body-name: body
+      x-swagger-router-controller: User
+  /recruitment/positions/{id}:
+    get:
+      tags:
+        - user
+      summary: Create user
+      description: This can only be done by the logged in user.
+      operationId: jobDetail
+      parameters:
+        - name: id
+          in: path
+          description: job ID
+          required: true
+          "schema": {
+            "type": "string"
+          }
         - name: x-api-key
           in: header
           description: key access
